# hyvve-backend

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/versions/: 00bfc7b47aab_updated_the_contributions_model.py  11430554c3f5_added_a_reputation_score.py  11935ef26e38_updated_the_model.py  2492e4de9245_added_the_creator_wallet_address_on_the_.py  51bd398bfcc0_campaign_models.py  55928e04f3d7_added_onchain_contribution_id_to_.py  5e39eb3d225f_added_the_is_premium_field.py  72842c63f1d8_check_for_updates.py  9c904ea441e4_added_current_activity_level_for_.py  c9a8b8123913_added_relationship_between_analytics_.py  dafce646c420_added_the_ai_verification_score_to_.py  f55f1d1d08b1_removed_data_hash_and_signature_from_.py  fca33b53ad8e_added_activity_level_tracking.py  fe269c6a3c1d_added_the_campaign_type_to_the_campaign_.py
app/: main.py
app/ai_verification/: llm.py  routes.py  services.py
app/campaigns/: models.py  routes.py  schemas.py  services.py
app/celery/: celery.py
app/core/: constants.py  database.py  redis.py
