[tool.poetry]
name = "mammoth-backend"
version = "0.1.0"
description = ""
authors = ["mannyuncharted <omoebun52@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.38"
fastapi = "^0.115.8"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.1"
uvicorn = "^0.34.0"
celery = "^5.4.0"
scalar-fastapi = "^1.0.3"
aioredis = "^2.0.1"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
openai = "^1.64.0"
langchain = "^0.3.19"
langchain-openai = "^0.3.6"
pypdf2 = "^3.0.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
